Element.switch geometry join order (#14)
* added SwitchGeometryJoinOrder node

* SwitchGeometryJoinOrder tests

* Update test Dyn

* describtion update

* Update RevitNodesImages.resx

* comment updates

--- a/src/DynamoRevitIcons/RevitNodesImages.resx
+++ b/src/DynamoRevitIcons/RevitNodesImages.resx
@@ -9325,6 +9325,56 @@
         zQ0z56S+fhBFpxFFpxFFpxFFpxFFpxFFpxFFZ6GhP1g6ciTBBSdyAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="Revit.Elements.Element.SwitchGeometryJoinOrder.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAabSURBVHhe7Zzbih1FFIbzCHmEPMK8gJBceBHQMCIiEoQR
+        gohBGQW9GDyMGDzgadQoiijzBo7GGHWiTt5gHmFAr2UeQGj/v9PV1K79z7are3V177AuPib97+6edeiq
+        VbV6T85VVeVMjBSdskjRKYsUnbJI0SmLFJ2ySNEpixSdskjRKYsUnbJI0SmLFJ2ySNEpixSdskjRKYsU
+        nbJI0SmLFJ2ySNEpixSdskjRKYsUnbJIcS48tPP9BjgB1QzYVTZaIMW5AMcPkkBMSmqfFVKcC3D8KA3E
+        lKT2WSHFuQDH2yS8+OXd6o39e8UJv5+k9lkhxbkAxz0JUwPHPQlTA8c9CVMDxz0JUwPHPQlTA8c9CVMD
+        xz0JUwPHPQlTA8c9CVMDxz0JUwPHPQlTA8c9CVMDxz0JJYGTfIFzkUSaJ2Es4BADvgsY5FM6eAbtZ54E
+        I+DIFuj1utKTMBA4sAlWBv/hN3+oHn37VnX5rR/l5899fiiDNDaxDalfVkjRChh+Hsj3xI+9c7t69rPf
+        qpe//kM6/+o3f1bP3zysHn/3dnXlxq0zzxub2ObUPyukaAGMvgCOYycuvXZQPf3RL3WAlcNzJLY/9dEK
+        KQ4FBrPwLhRcTjUWwee9OILUZ2MQ+5D6aYUUhwBjOQUtjAA+/crBPvB+rB/qszGI/Uh9tUKKQ4Cx7dqe
+        WD+1T7z3c31f9dkYxL6kvlohxb7A0O3Y6JLTxljE/qT+WiHFPsBITkNtHeATq5xaN4I/JPXZCin2AUbu
+        B2O5Ctr57kg6tYoXsCHb+vjX6tqn3UcQf9+YIy74RFKfrZBiLjBwYRTkBuUVrJqu3PhpweGrH96R56aw
+        SI9ZqGObUr+tkGIuMJDtiNrQ3IDwyb/0+sGCs4SaOj+FCef56jMLYptSv62QYi4wsN0Vd12Oqqc/RV1X
+        mtie1G8rpJhLbGiX9sLOt0fy6U9R166Cdej6F3er6zcP64afBbE9qd9WSDEHGMfdcW0kC7IKTgoLb7hm
+        FeraVVz94I68jxWp71ZIMQcYxw5pbSRbEyo4KS999fuSg2pkqGtX8eT79zdyI3Gq/LdAijnAOL6cqQ19
+        Ck+iCo6CBZnXsC4wKao+qOtWwXoUXc/VGnfvVmwp/y2QYg4wrk3CkB6RRRKSOfxI2TtHpJgDnPUkDESK
+        OcDZNglDWhUWSQh7hoYDZe8ckWIOcJbfkKgd71qYFSPUhFH+5PXeI5evgb+AWY2QYg5wNnuJqrBIAh+C
+        6PpRCimC/w+oGo5A+xWdvkgxFzjc9o36vgu2SEJy/YaydQgI+GaUgH+jf++DC+qaLkgxFzjcti1ylqkx
+        Q5OQ1IMTZedQEOiDKPAh+PHxLjivrl2FFHOB020Dr28be2gSkqloT9k5BAT3QhTsv5ufF8EG4LQUPst+
+        AKTYBzjeTkl9lqpDkpD2eMAYU9FeE2SOhhD0th7g35yqTsBxfF0XpNgHON4uVTkacr9ZkSaBx+o8RfKF
+        sVH2BwjuKWDgGewwDZmswKTYBzi/8GInd7naNwnJspSMMQq2mqDXUw2D3xzPKwkEAWibeSRn88b+UWji
+        8WeXV5xJMSbmtYAg2MdN0Leb4/kmgSAQ7btmkruL5rsGpaeIBPC7Ttkrky4g2KwDnO/r+zfHTILJXkSK
+        Q2AgmoC0AWIi+qyYzuKZT+53YCM4DfZep/8fIfjR8VJhHoIUh4KALCWC7565ilFB7QqLfbIUJUyAeR1Y
+        BYIfirRJ4qVoAQLDRLAPvxA0BjE3GQw+R1N6L8BEl05A2C+YveSRoiUIUrt0jeHI4O6aX39PWx0MOhPF
+        lc9Zf68AuEsfpQasAsHfbpJg1qWVojUIFpt8S6OiJ/xjk031e0qA4IeV0ny6qDkgeGx79/3PBTn1jPaK
+        sQsIfNy6MBuFUhwbBJP1gv2mPcAR0m7yIqhzucsvGY+28skBgQ875X31eV+k6CyDwLNRF0aB6UMhRWcZ
+        BD7UAtNRQKToLMLANwng/sB8RSbFdQOBYV+f/RyTHWwM7hmad2SUVZkU1w0GJwoU+/4mTyvuExp1pG7e
+        jYEU1w0GHYSXLoTNtt7LWVzLpWj8KnOU7mxAiusKgsVpiQmIk8EdbqeRwfMAn/7QGyKj702kuO6IQBJ2
+        Puu6QZrzuOzkMROVvsTn+UX6UlJ8EEAA+VSzqIalZVd4ftGduRQfNBBUzvFMCJeafMJDYjhd8ZijgKNh
+        kp25FJ2ySNEpixSdskjRKYsUnbJI0SmLFJ2ySNEpixSdklTn/gPQKWxudDkujQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="Revit.Elements.Element.SwitchGeometryJoinOrder.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACEAAAAhCAYAAABX5MJvAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAIySURBVFhH7ZbPShtRGMV9hDyCj5AXKI1aBUXBjQsRQaGU
+        UkFCoZvUJP7ZCG2praVQSkvewJkE/Fs0ght3rsSdIrgWRLEgcntOmttObk4yjaG3UFz8mLnnm/nOmTv3
+        JtNhjPnnSNE3UvSNFH0jRd9I0TdS9I0U43iQWUmAVAt0qj4WKcbBxqmZ4GZgrnQeR08uvMb1s6qPRYpx
+        MMTQQsnkCruxjL9ZN/chyP8XAo06aV4l7TUEzXvz4TqOZnChdEPz/rniVV8+lKYubYfAzcmHL4PvI4ur
+        JvO1XGcw/fFbnebSdoiebHjGJrbhi887Zuz1msl8+Rnor4fAj8wzTr9t9vjdJptV4LnVOUv2XNFWCKyD
+        /Sfvf5sNzJdkCPL803YlDA1duIbuHKIvXzyJTjdfgZ0NN8TUhy3TNRNcImhBgXtSysMiReKGII1C8LpH
+        ufBI9SG7g/0JMKlqRIoETfcm327UmDUKMfpqjSGKqg9BgAlwAcog6dZrBlFgNoHGvxYmebq8VQnBo9W4
+        dfGPettsymF8AA5BCqTdes3ApSsbHLurn9s0Oma9OxscqPsJnxwUQFnViRQteLoEDE65wrkDouZcB9zC
+        rPM6dX8UhGgYVIpRaIDXssRfTn6g2A8Vjqn/YQC+hoKqESk2AoZJwD+wusXVDL4KBlE1IsVWgUEA5Hck
+        ZwAsqZpFiq3CpwQnVcPh6pjbkruiaQAixbsCQ+6E2Spp0PQr2yJF30jRN1L0i+n4Aa1TDIHJtCJgAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
   <data name="Revit.Elements.Element.JoinGeometry.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
