--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -450,6 +450,9 @@
   <data name="NotHostElement" xml:space="preserve">
     <value>Element is not a Host Element</value>
   </data>
+  <data name="InvalidSwitchJoinOrder" xml:space="preserve">
+    <value>Geometry join order can only be switched when the elements are already joined.</value>
+  </data>
   <data name="NonIntersectingElements" xml:space="preserve">
     <value>Elements are not intersecting</value>
   </data>
