Element.UnjoinGeometry and Element.UnjoinAllGeometry (#13)
* UnjoinGeometry node
* Element.UnjoinGeometry tests
* UnjoinAllGeometry node
* Element.UnjoinAllGeometry tests
* added node icons

--- a/src/DynamoRevitIcons/RevitNodesImages.resx
+++ b/src/DynamoRevitIcons/RevitNodesImages.resx
@@ -9325,6 +9325,131 @@
         zQ0z56S+fhBFpxFFpxFFpxFFpxFFpxFFpxFFZ6GhP1g6ciTBBSdyAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="Revit.Elements.Element.UnjoinGeometry.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAB9RJREFUeF7tnV1vFUUcxvkIfAP4CHwAlb6dvggYm9ha1EIRxNAqtJI2gRBpNWKJ
+        QcBUDWpMuVG4IFLfEaMl4d5eemEM0cRbid67Ps9yZpiZ/e/p2fddOhe/tPvfc/bMPM/uvO7ObguCwFMx
+        YtBTLmLQUy5i0FMuYtBTLmLQk5ze3t6doAc8DRbBMvgL/Av+Ab+AHdJ3IwFPPBBxO5gFl8B6myAB/4HH
+        3ONaG554IN4ucL8tZhZ+d49tbXjigXj3HDEtRvv6gkMD/SFLQ62QKyNDwY0nh4OLw4PWZ91jWxseGQjH
+        sl6LeGqwFVyFwOTWnpHgzt7NMb/vHt/a8MhAOG0Cz3hJZKKMOT80GFzHFWDuU98n7vGtDY8MhGN9oEU8
+        NjAQwqKHppj7yGUUPxT+dvsqoTHG/j/d41sbnnggXlctIWUAi6mTrZZkwrp7bGvDEw/EY/N0wxAzgjKA
+        8Crh1eJNKACIyPqBHbE/2qJGDJhrDYQxtpC4zb/GZxfdY1obns2BiJErQjKAeBMKAAJ2bYC5z5uQExAv
+        kQGEdQH3sX4w4j3usa0NjwyES2wA8SbkBERLagBHTcP/1/Y86LB5EzIAwZIasAr057mfvWe1TdzfIJGA
+        5wEQLLEB7e9xmNvdp4j0EUgkUEceP/3FLFgvjfnP7vaMjOpihXRjAMH/EfPacBh8l5kvRSRQNyDKThCU
+        xsK1oGfvmCVgtwYoEKMRnF1TEz8spna6n1OIwToBYXoiQhVFDgakQQzWCYijTRhZ+jI4/sGPhTBz+etg
+        ZHTCErkMA4gYrBOmCfve/Cp4ffVOIUwcmbNELssAIgbrRFkmtIYeTrywWRlnQM9Tz21I6cyCGKwTZZlg
+        Cq16uhEDxqeZjsjYT1bEYJ0oy4ThfaNa7P39/SGCAd6EIk04OLtkiW6yZ/JVZYA3oUgTyAvTpyIGMDZ5
+        4XtvghKgaBPIwspa8PKZyyH8nzFvQskmSHgTvAnVg0x7E6oGmfYmVA0y7U2oGmTam1A1n49Nrh595aI3
+        oSiQoV2As2Y3AWe1zMySDTWQNj73iTchL5CJ7YDC32tnqiNnD58JVp990ZuQF8gAxb9vZCgR3oQMIOGc
+        J94wMqKhsMwkZ7cWPv7ZyjxjR9/7IRhb/jYYPfeNHuP/cHHF+lzRNN4EJJqtG+vs7z1zM8yYK/pmXJtZ
+        CE24NT4h7i+KRpuABE8ZiQ/Z/853welP18XMdoMyQtpXFI01AYnV7XvCs3965baYybrTSBOQUNYBugii
+        Aa9d+UnMYBNoqgm6zV+kAap+KLqibpwJSKRVDxRZBKn6oeg6ookm6E4Ym5ZSpppGo0xAAvVVwGIoSyuo
+        TjTNBN0hY8KlDBVJUXVEY0xA4qy7p5N2xPKABhRRRzTJBF0U8cZdKTNFwytgq5uwqhJaRVFk4oiWN7U2
+        QfcNOPAmiVMWbBQcOP5+eEVcmjzhipiVWpugm6ZVm9A6uxbOP6iiSaUrB5jH2Cdu0iIG02AmVhKmTDg8
+        znTQiPNT87NSeuuEGExDHU1oE3luuG6IwTQgs3rArurBuq1sQm0qZpWONrmX4XkjBtOAzPKOiTDjVTZR
+        2UlU6SBuOuuIGEwDMsxJ/DDjnA+WBCoDzkmrdADxCfq6IQbTgAzzHiItQFWDdzwBjHTk3qYvAjGYFmRa
+        9xUOXbwlilQkblEExGUM6oYYTAsyvagEYIdJi7OyFjxz4Jh+BIkP6c28ccUSMA84f6F+H+T+qGtRiMG0
+        IOO8u043VVlBn3z3uvWMsMnhhfOimGlgs1j9bpspKY11RAxmAZnXV8MTJz4KBgaHtegjfX3henBqESaa
+        IwmaFNY/HLlVvwsacxUQMZgFCMCr4R4N6B14uB4oDVBLF5sL851YvioKmwSnGCK176CZiMGs7D54+kic
+        AVw513xQO6sJggGXpDTVGTGYBQhrvWegkwFZiiMWQYIBjegXuIjBtEDYrg0gfFZYEngzWAk7dQDh/PZ2
+        KV11RwymAaImMuD5+QuiwJ1gP0A4+wnHrRppABGDLhCN60PHDoRhXyIDdr90LhSPfQneINxpwI9nPTt+
+        wpmvaESvuBNiUAHBuI6bFhdwPTerF4pta+G9bg2Q4LQkh6EJDZI+Y8Dip1GtoDjEIIFgcUtL0pTwqsDf
+        RAYA3pHBW2P0TQEpYNHTmI5YN4hBiEVxtXgU19wGNCixAeZvQEj2J2gKDen0/Bp74BSeo7S1nxtIgxiE
+        YNY7ZCiqs/L5XWCt/alWy+rGgDgoMuBzDSHSZx5FxCBE0yZwiIHiOm/DEBduzWLAVkYMQjhWyKGIvAIo
+        MIVWMRNvQHbEIMSLmOAURyHegHwQgxBwUxO8AfkhBiGifp2VqnD5piQV8wbkixiEkBET1ByAMsA1ps2v
+        gN9lE/aRbE4WgRiEgLr5aZpgGiAsXezCTl0j5nirRgyaYirRV5IZoGjk0HLZiEFTSCW8awDrAl4dLJJY
+        aRNeNUIryhdLmxAJQLQdpohKfFbCN9rDEp3g55xhji3T801LJADR+PrzUMCJ/vjX3lJsnvnq7Ce8Kty3
+        srrH90QRg6aIZwdbwVtDg2HRQ6RX33agcfO9VSAGId5vjphp8AZ0iRiEgKwX/jYElWATlH0C1S9gL3sK
+        cPCvsVONVSAGFRDzbaCEPgo6TnN60iEGPeUiBj3lIgY9ZRJs+x9YdmCAC0F6uwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="Revit.Elements.Element.UnjoinGeometry.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACEAAAAhCAYAAABX5MJvAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAsFJREFUWEfdl81qE1EUx/sIfYP2CaQvoM18pJOvQhQRAxUbFKyxtNVFwDZJU4MQ
+        KaVZFEk32iIVv4qZRmxFkQouXIngTly4UVxJdSFqGo7nDHNDcuc0GZ1JBBe/O8NJzvn/uffMnTt9APDP
+        YYO9hg36jaIoJWQXeYsAUkcmxe+OBL9BsdKCEYT1sAF3IyHYRLajYTLySfzHkeQ3KDaEfEXgYlCH+2ji
+        VsQgE6/EfxxJfoNi/cgbMkAzcQ6vNDMYy4v/OJL8RDYQVlVI6po/Jg7PPhxEAu04MlWOKbrxvtkACo/H
+        VPVlVFWpQQdFPYeAGyJXqmvBeRNGC9UD0UZPWD3QbIBy8Uqz099cr6W4W8jEqaUdyK29OJCEpjUMBI4l
+        i1wdARvshBsT8ZNJi1CqCLQ8XB0BG+yEGxMCWpr/y4Td9XlibqLw7sw1kxWV8cUEFogr2cqenjNricVt
+        oBkYy9yG6eVHrKiMZxNazkwFMpX91MpTR/E7F9KOGIcnE5hIGxJcWn3OFhd0MuPJBG5GO26brx2eTAzP
+        VX50mgXB1PVnkLp6z+oXGdpZvSwHK8hBYjcTZ/cwx3p6GFq2aRk2SGAiK8hBJoz8Vpmr4wY2SGhZ8yP3
+        VHDECtUamrZeUH8DGySUTKUYnX9QOz2zAER6hd+cqB+wf352mvJ2sEFieCw9oESP/6LXMR1CpovrDgPU
+        uLiP1NVs5TJXwy1s0H7nN05EkWAIJhY3G+KzN3YhufyEDOxj929wNf6Exg2KzpAwMtBiQFW/aZOlDVye
+        L9SsgpH81mu8tn303GINKBqgQ4h99vvcZIBOyUNykt9YA5kQB1DpSBaXE7qBNZDYeV2HVfsDxTbwnczJ
+        Cd3AGlCsvBQagcdR/DCxjdAXE8Y/yAndwBpQ7NBRTa2P45LgvYCatOv9QDRuUJCeip6IyrDB3gJ9vwHn
+        S79ZjCnXzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="Revit.Elements.Element.UnjoinAllGeometry.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAnUSURBVHhe7Z3vjxVXHcb7J/AftH+B4Q9Q2WVZlqWlLA0i
+        YKGsECo0ga1N0G6aCq3QEqxdsKiIabZBjWgTKQZlpdLlP+CV6UviG30nr4wvjOPzHOd7OPf0mbkz987O
+        zDXnxSf37jNzv3PO8505v+7c2aeyLEt0jBQT7SLFRLtIMdEuUky0ixQT7SLFRLtIMdEuUky0ixQT7SLF
+        RLtIMdEuUky0ixQT7SLFxOhMT08/o/QypJjQwOCpnCVwFqyC9Zws4D/g5yqGQoqJQWDoEfA4N7gOSype
+        jBQTT4CRmyNjHXu2bs0Wt804zs3NOlbn57I7z+7I9sxstf0+VzFjpJh4Aoxks+NMvQaT156dzx48p1nP
+        X1+enbEk/EXFjJHiMBD86+Bpte3/DdTTJWEeZ/7Fue3Z5R3b/ZlvV8IRwOT8OU/QgRmfhI9VzBgpFoGg
+        NP/f+QGMvwLrnFhgsgDYgdUeKfQN1gGE9R2AhjMB5D0kiEkItp9VMWOkqEDApwF7/fAgVVhV8SYJ1IEn
+        1Rc65jABfM+rI0rCgooXI0UFAnJY5oJ/vHOHg5cnD/zq7DZ/ado+EZXOiL6DenCU5OoUJ4Aa+4xP0DHb
+        PmBKxYmRogIBfRKY7WHcRJKscGBdxZwkUIfSBJCPkARif4PGk/CcBf8tDL6Xm82rgAXhVXBi2zbfafGs
+        4DAu/8xEJwHlH5oAIpKwScWLkaICAf14mQe6sXPOne2WCNtWwBEV0/jK8u8WQOk+XcGyWz3KEkCoc/Rk
+        f8exipBiERacSWACOGwbkgh2ZqX9AcyfAllOpRlmHRBzEzgCVsFDYMcy1gG3cZ+BMxdlr5KAu/aeXry+
+        fdZvC2OVIcUiLDg7ZBrP9yWJqDQqQsVDYx7HRowK4jwDaG5o+DB4fH6Gw9IqCeDaUdEQ9pYql0KKRSCw
+        G6bFQ7FRE4HK8uyLjVhR+9YBMc5GMbNdb/8+O/Te3ezkB/eyUz/+1MH31ObP3R7Yd8ux7//T6lCWADse
+        3q8EOqFPm8MylSHFIhDYrRZaEmh+ftDaiUBl2UzwzPMGmQlgpEkePseYbF5cnOk3brm4Z65/lr25+qAU
+        7sN9p49f8GWvkgADGiennKhyFFnrapZiEQjuksBREM0O5gX/4mudRMCkFTOLBix/uO5My7Xaoyl8hgnw
+        TdueC3dcTGV4ES+/cdmXuU4CxkWKRaAAt1gQDj05KQmGoL8ErqmqkgiYxPbamXXg0h+9Ccev/MmSQCrN
+        Ng3s7xPAMzo0twqn3/3Il7XNBBApFoFC+AlbBHVO7d3fwxIBo1yTwTM/PluD9vlRfPwisK/vAxbfXxuI
+        V5WXls75cqoETD1/8KE6dhNIsQgUZhN4aAXL8YXDez+iKErE1I7dd8sMY4dp28HQ5Q7ss9n2ZxMUx6tK
+        mAQOwQcSsO+klWdDFiSlOAwUjGe9Wy0V24YnApXiGa/MIDQzr/TQISu2F15VdQibo5B9x5bCvqr75qgq
+        KPzQRLyweFqaQdhRV6k4tvm+hf2JilWHsGMmL5583enRyK2ReUyIFJsAlRiaCDYBsRFGVHE55oa+xO3j
+        XgUhyz9bc1cFX72G2EFZGp/VS7EpihJh7e3C/sUBA0JY8dnvfWIVl0NW6tz+tXf/IGM0SdBEVp4JV0WK
+        TRInghM9G9qWJYFEQ9YvLPDZtiaaomFwEJEf73FcjnGRYtNsWXzzc0tESFlzZHA2nVf+EfDtMd/nuhtR
+        qc82SThqszI0hRSbBIXmMnX21W/9IJvZ/uRbp72HT8jKxhQNWfHer76qzzXNpCeBZ7A7o1mZ1354c6DT
+        qwLb/JVDpx1mBOHf7GN+/coZvy/fU4v1Syu/ye4v7M4e7NqZXX37p16vysQmAQX2M9lxmgx20rdf2OeM
+        PXzq6shJ+Oz5XU7/1allr1dlIpOAwnIM71ZJmxi9/OjC9ez2wcPZa5fvOEOMOkNTJmJt3373qraXEQ4S
+        4rqOixSbAIV1X6hwDF9lKbnv8ETKk9D49+VSHBcU1Heao6xo9pFgBt/47TtSHBcU1E2iONlqaiZrWJuv
+        tm0U0Xyl8jdmVZHiOKCQ/itLfn2oKjUObNNHTYJ12GpbGcNm7uMixVFBIQe+slQVGpefnP2g1SREa1iV
+        buaqixRHBYX0Q9JvX7svK9UldZPAK9nqAxpfMzKkOAoopF9WbmNBbaNhAoLOeGDJpGmkOAoo5C0WuMll
+        5TLev3TDobaNS7BYR9i8Nt4Zh0ixLixkUOiROX3iYnbjwFHX7pshagb81vW17P7u/81+L1wt/oauLpz8
+        BQuGZMMTQKRYFxY0KPjI3Nz7ojP2zjde8saoJKyeOe+1K+986PcdBpPL2EyiaTSenW98AxjgMHvDmqAQ
+        KY4CCsw+gZO0UVma/c5NtzYUmlQEm6I6CSC/OHjUJS5cfxKw/a91u824SLELUHEmwhmhDGwCNne82phs
+        O1YOjecyS6vmG1LsAhiw4Umw+IDfTdsV2EqTU4YUuyA3pK0kbMika1Sk2AU0xkxSBjaBxeexVBm6Qopd
+        QGPMJGVgE1h8HkuVoSuk2AU0xkxSBjaBxeexVBm6QopdQGPMJGVgzCtvXXN3axw9c7Hyd9YWn8dSZegK
+        KXYBjTGTlIEh+4+9OnDrzOzcvLuBQO0bYvF5LFWGrpBiF9AYM0kZaIT3i/JmMntf5RYai89jqTJ0hRS7
+        gMaYScpAw25h5118/A0BfzVkiVD7h1h8HkuVoSuk2AU0xkziIloRc99cdobzp1pcguBtlZYEtX+Ixeex
+        VBm6QopdAGMqLQJuOfTdwiSo/QtISSgC5vCWSX47V8jU3uPux4sFSZCfiejdkwOk2GdgtnsIlEpCvO+k
+        IMU+k5LQA1ISekBKQg9ISWgZGMvfTYdP4eVPr0qTgFd7iu/EPARRin0AJjIBj4A3OadwiAri/cd+Ykwb
+        SLEPwED/g0P+2jN4joajIAmKXk3MFFLsAzDPNTvEnjURJqIoCXwgVvQcut4/iVKKfQDm+QeW0Ggazt9B
+        28qpSgJ/qE6NCTMNpCSMAwx07T/h0yVpMF/5d5wE+zt+OgvofQctxb4AA33nHD4RgMaHSaDpNJ9/h49t
+        AL18wmSMFPsEjOSjQN0Drew7BJp9Pm+izqMPCJOTm0825IksG4EU+wYM9f2DXQH38mTwCWR8DZ9HCibq
+        YbhS7CMw1o+WrAO+D/gadtiAD8Xq/K66Okixr8Bczp6d2TzzmYBPcUUECaj1KMy+IMW+AoPZUf89N9w9
+        jXf/k3+dQno/MVNIsc/A6C8B9X8crqj9JwEp9h0Y/mXwN/CPnHfUfpOCFBPtIsVEu0gx0S5STLSLFBPt
+        IsVEu0gx0S5STLSLFBPtIsVEm2RP/Re9nAKVSr6XcwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="Revit.Elements.Element.UnjoinAllGeometry.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACEAAAAhCAYAAABX5MJvAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAANMSURBVFhHxZbPThNRFMZ5BN5An8DwApgyMy2lYCQoKH8M
+        4KIqKoI0YBGhrZFCKhYMEP4YAsGYgEShtQpqEBIWujEkblwpCxYmxqgBQZTker6xU2eGU9saHRe/TO83
+        55779dwzdyZLCPHfYUWrYUWrYUWrYcW/SV5eXjExS6yUy/I3usbMMYYBoCAXYTPrf8oRWVrvzneIa8SD
+        QqcokaVtc4xhQIsHe5wO4XXYRa0iiwpZ3iBtvz4mU2h+rkuS1vsoL4zQeMUcYxhQgLefgnuJuIlN0nJw
+        L7f1fnZhIOrWx5uhmBzChivGNDe7UJJewQAZeePPt8PEknmeYUABNgTS4rsoIY1XkQj3nL7IjK1t9jst
+        sKcyMGfvmPtwtCu2c6JnXuAqeac2XXbnWtzAZ8qzj0BvqAb1GAYIaLQrWPwZtkIzctDdfYBM7NT1PxEF
+        /oihnIeuRtud/shu69iSaB9fTnC8yi1UA7K8xS2sZ49AE9DN2ZioGZFKajbrB5+qyYsC0e18X6QIsaiK
+        wxfZMBsAJ083i7Jj1UJqHPlCcWo1k8GKGqoRRdnGFl3omlCTXxxeFI6OyBruu/zRUG14YY8BPeWhR4K2
+        qtKcWw8r6lGaRj9V1vtEc/9cIrG6955bY+Ut48uXeu4l9L7gmOgcjCTGABV0BaLjXG4NVtSgsg+h0fRJ
+        VYYXRPicTzT4J0UwPJ3QJzx+ceP6bUOs++ZjgYpx+TVYEWAfk+23Rjg0yep60EPcE6WHFQFVYRH/gkv8
+        O/TGMJ/64QWXXw8rwjmBMn7UU+cZ2uoO/mxQEKuqTvwGod5pERhdUJu3tOuhUNrnXqd6MgArJqPsytSd
+        pr5YYtHOAWMTtnkHRGnL5Hvaxpd0dni4HBysmAx0uXZecKCJ6Z9n/PJjxWSYTZwNDIvWkV/nhGUmcDjB
+        SM3lAYEj/nDlKXUM0Af/3ASOaxgBSsX5VZykclHpO00D6TSiGVZMBzrSfclezZnCiqmAAWI+buI5YSMy
+        roAGK6bijKKoHz1xExvxq4+LTQdWTAUtuIpvBXwK4lVPH7AwUczFpgMrpgKlL5Ckr3ddTvUJoXEDF5cu
+        rJgOtHAO8ZaY4e5nAitaDStaDStaDStaDStai8j6AXGY1wrUFK9lAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="Revit.Elements.Element.SwitchGeometryJoinOrder.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
