--- a/src/DynamoRevitIcons/RevitNodesImages.resx
+++ b/src/DynamoRevitIcons/RevitNodesImages.resx
@@ -9325,6 +9325,53 @@
         zQ0z56S+fhBFpxFFpxFFpxFFpxFFpxFFpxFFZ6GhP1g6ciTBBSdyAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="Revit.Elements.Element.GetIntersectingElementsOfCategory.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAXuSURBVHhe7ZzbjhVFGIV5BB6BR+BmhBkGGIiHqHgKGDUa
+        M8Z4joZMzJAMQgCNeLgQDzEhGjOJN+qNAwY8YGR8Ax/BR+AN2n/13n9N7Z61cbq76t/Vw3/xhd1r966p
+        WmvXoat7s6eqKmfGUNGxhYqOLVR0bKGiYwsVHVuo6NhCRccWKjq2UNGxhYqOLVR0bKGiYwsVHVuo6NhC
+        RccWKjq2UNGxhYqOLVR0bKGiYwsVS+bw2s97haUC2M/q1wUqlow0/l+hKoRlVse2ULFkiBGzZJPVsS1U
+        LJnYhENvfG7O4ttXPYTIgGpubs6cAw+e8hAiA6hJufEQhMgAalJuPAQhMoCalBsPQYgMoCblxkMQIgOo
+        SbnxEITIAGpSbjwEITKAmpQbD0GIDKAm5cZDECIDqEm58RCEyABqUm48BCEyoLrvyP3UqJx4CEJkQM3C
+        8iXTMDwEQQ147P1fYjNGYcwfpsal5J4IQRq2X3hSuNDgtIA7WrUB59f/rlau/lUdO7exZcqZH6uDjz5P
+        zUvFrg1BGrMsbAh3xo37X9a+26wevni9evqjm9U7X/85EcbCC2vUwBTsqhCkAbhXjG/4jo2P0QDQI/Av
+        jp/55GZ4/9ArH2cZnnZNCFJ5DCv8XvHqD/UdLHyb559dCcDU+K5WMwD0DAxPR89u1OAcnJ86iF0RglT8
+        StSIEWI8TD9w/ARteIx+hgVw7L2N6tUv/qhfHzk7Og8TNiunK4MOQSqM4WczakBtPr7lbb6t+tlpAeAY
+        K6eHLlwP5+JvsLK6MPQQ/okqPxoqOqzv9fPTAoAOVr+9XT1w/lo4H+ax8toy2BCksutRxXsNEVrGtADQ
+        Q/T1Ux/eqE5eHk3Wi+9+n2R+GGQIUlGs70PF+47RWs60AFa/uR1eY944dflGmB9SDEuDC0EquU8IS1Cs
+        eljD2qBlxZOwmq7BaG/A3ID3XpPz6s+d+al3bxhiCFvDkEzCKYYDLU8DUNP19Uuf/T4xHOE1WJL38Lm+
+        vWFQIUgF0QtChQ8+8TJtVFu0vNh0BKI9ozkcaU95/IPxXpN8GVi5O2VoIYTrAayEWIO6oGWq6XEAcc/Q
+        AHD83Ke/1sfHx1sbffaXhhZCmAtS9QKgZcYBwOy4Z8BwvKfn4Rj60QQXcIMJQSqHndBRRXt2/yZaLr7t
+        GsCbX92qX8eG4xgbezjWc1//8lbvOg0pBGzM1RXFng9rTFe0XIzzGP+1N2gAcTiYkDE541y8xvt4D59f
+        ePFcPUm3Bb1I6yAUHQK2peuKzp98i5rZFS33xCVsTVyrrwEeEZOxHMWYj1UQ3sMxXsN0PQYaQiKKDiHs
+        EaH7MjO7sriy3jRilpxm7W8LFfsilcsWAkCZO6Xxo47fBFy7YOUW37XrQpKfSgEq9kUqGBq+k+3pnOAq
+        ParPEqvvrKFiX6SxWXtCGzyEAkJoDEf3VAjZVkdt0XqM2cvqO2uo2BdpLCauuuGpby+2AfOR1kO4w+pa
+        AlTsizQ4PB+U+oq5DbhvHeohvZPVtQSomAJp9NbeUeYHsqbRuKZItqRMDRVTII0O9xJS3MxpCzYN9e+P
+        KXI+AFRMgTR6axNPsF4lNXrBOqtjKVAxFdL4sFSFKakfxJoGNtr0747Zx+pXClRMBRofm2GxUmqsiMAV
+        VreSoGJKxISwXAU5rxvqAGQ1Fv09PGpZ7FygUDE1YkQYlgCGC2ZiH0gAINl/DJUTKqZGzMAjkBNP4KV8
+        arpeCW0PoNglaRMq5kBM2RYEjOtz/xmPUSLMiTJHDCYAQMVciDkIIuwrKVg5Ya7Yac/AxV/jNqOCC8Qi
+        N+nuBhVzI0bh0Uj64xDseupvE2A2ri8QEI7rbentw46Ceaf4SZhBRQvEMCxfJx4U7ghWQIP79sdQ0RIx
+        EGGgZ0zOF3cHvQgBDtp8hYqzQkxFIPEvNzHEABiOY4Q1iGVnG6jo2EJFxxYqOrZQ0bGFio4tVHRsoaJj
+        CxUdW6jo2EJFxxYqOrZQ0bGFio4tVHRsoaJjCxUdW6jo2EJFxxYqOpZUe/4DKQMPs/WiYmQAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="Revit.Elements.Element.GetIntersectingElementsOfCategory.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACEAAAAhCAYAAABX5MJvAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAIcSURBVFhH7ZTNSltRFIV9BB/BR3ASNeZEokkV7EDBDAQV
+        EyVo1WpqWpUoKEL9GfgTHWihKhgdSECxKBgdOPEBOuigw1LouINO/IPt3oEjNzfL3quG48TBx4GVc9de
+        Z599UkJELw4UTQNF00DRNFA0DRRNA0XTQNE0UHTCnzwoZ8gt6tPuOfLRQNEJNg74Btb+ejwecqKyPiwh
+        viMfDRSdeA2hkRAqvvEPFbVT9BBcvFQCMPE3k4dUl8yQrykKi2uKFkJ93Olj/nBxkg7I2jJ7TB0LJ9TA
+        YQKxzzCAUJQQKpH+phLbN1VN3XnGzTNH1Lt6Rl1LWWqc4iDRibzi1r3PCsGn31SDX24rvP4C4/DccS6A
+        0LmYpdrxfaqoCeXt03ufHIJbXiZtf8hYQnTydUiInpVTCvP1BN+n4N4nh1DD28vVkekCU20s1xFLneZC
+        dC9nKcpraDyT+82Kt6X/GSES6QvrHFiR7oRG0hQc3blHXktwYv9axTd/FcAHQjU0UBQkfdXbNhjCjsyM
+        XJ3dwy1QFNTQ1/Xq9iQsakfCyhNGPm6AosAnC8jTtL8MhC82T04t/x9Q1PDpfjw0nBqZG/9Y5pJDlyIP
+        N0BRI8Y8G7/lpKgjMvkc4Ir3NaPv3QJFK7kgH7ZOeCXfuxR5W4dJuuMf3bvlK/jJejn67jFAEcHF5M8r
+        wkwx8WIU10DRNFA0DRRNA0XTQNE0UDQLldwBsliPqDkTJR8AAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="Revit.Elements.Element.UnjoinGeometry.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
