--- a/src/DynamoRevitIcons/RevitNodesImages.resx
+++ b/src/DynamoRevitIcons/RevitNodesImages.resx
@@ -9057,75 +9057,122 @@
   </data>
   <data name="Revit.Elements.Element.GetSubComponents.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACEAAAAhCAYAAABX5MJvAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAOoSURBVFhHxZZNS1RRGMf7CH6D/AizEXoZ9TovmthC3AS2
-        USiQFjJQELYYZuVOkJJsoeX43iQ1FUpF9LIrcOGiTVQkUW2KEokSym7/3+0euc59nLHNtPhxz/znzPk/
-        9znPc84c8H3/v2OK9cYU640p1htTrDemuF9KpVKj8EQhhHGjNbcaprgfZJYTvmNiYmJnPD09/VbPPut3
-        FqZo8fR4pyfKwhdkIIFhV1eX39TUtENPT4+fz+eDYGZnZ18zz1oviilGkWGDM7+VTb2525H5qXHwlgsL
-        Cz/6+/t3BeHIZDL+2NiYrznfawViio4wgDWxUUq3DZazqQ8aL4sy3xeLxcfDw8NmEJBMJn2+DwPZs1ZM
-        0REGsC6SK8eyX/Rsvt/Zvqmnvv5bF0r5bysAB4GQkZmZmdXo2lFMEWRUEBsY32lPv7ue8k7wvJlJnScI
-        0U2aRawuKqFOmCc8yysmgAzYBgIoyPz5pSOH8jNey6PLRw8PSyM7q2KKucrE54GBAdM8CtlQ1yxVekFM
-        ABn0iY3rae9GsbV5SQFcWUx598IAulUbF/meuSxcrS4cBEptVHpBTAAZlNUJL8jCVGvyHGNpUyJHViZb
-        kg81ZkvYjj5SbRlHcVtS6QUxAVY6sq/K7enNa63JzrAjhgiilPZOUhdLmbbTqo0taaNamDMjSDcZyeVy
-        Pm2LKUXpgqBumCdi7brrg0NvzlsOhR2RF2xDgs+RwObFOvO1MNkosDVq2zXOj9AwYGRkJAiScdTHERMA
-        U73tezEYBnAQ46LX3BkGdkoQKPdFg+BJINwdDW6d8DNdFAQ4Nzf3LOrjiAmgxZ+IccEZkWALbrenz/JU
-        li5Io3NcdzzgrJDRzpsDGeEwIwARCzBKTAAZjIpPopuuoDto0astSbqCzAAZCC4x9p99pwYYUxPUBjXC
-        VjAHtE0fLb+YADJICH/aa17EPNKiZIgsEABvFpi54qsGlxqZsfxiggPD5Y7sV7cN+kx2XFs20PP7OR+A
-        DGnLtvW7nOUVExyYYVrOpr/peSYMILg9uQcmJye3oy1YDbI1Pz+/RfCVPhATokTMYRRNbzQuftW6LxyR
-        86FQub7DFKPw9iK4urUQ7RYUnmVYCQHQOdVuUDDFvaC6tWDNWxMIlAB0NrzcaxscprgXWiyhhfnLFlR7
-        b29v7GjmonL/N9m6WgGAKdZCC/eFB9HOGeDgyOZ01Hjf/7pN8V+QGeeFo+afWgtTrDemWG9Msd6YYn3x
-        D/wB2q4vm7cM4toAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACEAAAAhCAYAAABX5MJvAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAA6hJREFUWEfFlk1LVFEYx/sIfoP8CLMRehn1Oi+a2ELcBLZRKJAWMlAQthhm5U6Q
+        kmyh5fjeJDUVSkX0sitw4aJNVCRRbYoSiRLKbv/f7R65zn2csc20+HHP/OfM+T/3Oc9zzhzwff+/Y4r1
+        xhTrjSnWG1OsN6a4X0qlUqPwRCGEcaM1txqmuB9klhO+Y2JiYmc8PT39Vs8+63cWpmjx9HinJ8rCF2Qg
+        gWFXV5ff1NS0Q09Pj5/P54NgZmdnXzPPWi+KKUaRYYMzv5VNvbnbkfmpcfCWCwsLP/r7+3cF4chkMv7Y
+        2JivOd9rBWKKjjCANbFRSrcNlrOpDxovizLfF4vFx8PDw2YQkEwmfb4PA9mzVkzREQawLpIrx7Jf9Gy+
+        39m+qae+/lsXSvlvKwAHgZCRmZmZ1ejaUUwRZFQQGxjfaU+/u57yTvC8mUmdJwjRTZpFrC4qoU6YJzzL
+        KyaADNgGAijI/PmlI4fyM17Lo8tHDw9LIzurYoq5ysTngYEB0zwK2VDXLFV6QUwAGfSJjetp70axtXlJ
+        AVxZTHn3wgC6VRsX+Z65LFytLhwESm1UekFMABmU1QkvyMJUa/IcY2lTIkdWJluSDzVmS9iOPlJtGUdx
+        W1LpBTEBVjqyr8rt6c1rrcnOsCOGCKKU9k5SF0uZttOqjS1po1qYMyNINxnJ5XI+bYspRemCoG6YJ2Lt
+        uuuDQ2/OWw6FHZEXbEOCz5HA5sU687Uw2SiwNWrbNc6P0DBgZGQkCJJx1McREwBTve17MRgGcBDjotfc
+        GQZ2ShAo90WD4Ekg3B0Nbp3wM10UBDg3N/cs6uOICaDFn4hxwRmRYAtut6fP8lSWLkijc1x3POCskNHO
+        mwMZ4TAjABELMEpMABmMik+im66gO2jRqy1JuoLMABkILjH2n32nBhhTE9QGNcJWMAe0TR8tv5gAMkgI
+        f9prXsQ80qJkiCwQAG8WmLniqwaXGpmx/GKCA8PljuxXtw36THZcWzbQ8/s5H4AMacu29buc5RUTHJhh
+        Ws6mv+l5JgwguD25ByYnJ7ejLVgNsjU/P79F8JU+EBOiRMxhFE1vNC5+1bovHJHzoVC5vsMUo/D2Iri6
+        tRDtFhSeZVgJAdA51W5QMMW9oLq1YM1bEwiUAHQ2vNxrGxymuBdaLKGF+csWVHtvb2/saOaicv832bpa
+        AYAp1kIL94UH0c4Z4ODI5nTUeN//uk3xX5AZ54Wj5p9aC1OsN6ZYb0yx3phiffEP/AHari+btwzi2gAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="Revit.Elements.Element.GetSubComponets.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAACmhJREFUeF7tnT/LHUUUxv0I+Qj5CGnSRUgRMPpahJSpkkZSvoUQbEKqdIEUAZsU
+        gaBFsEhjZeEr+AFSiY0YRBtBjP8KQbg+zzJnOHvm2b27d2fnvoEtfuzmufe9e+c5OzNnzuzVd3a73caR
+        keJGW6S40RYpbrRFihttkeJGW6S40RYpbrRFihttkeJGW6S40RYpbrRFihttkeJGW6S40RYpbrRFim8L
+        L168uACujnBJ/d15Q4rnlWTsA3AG3oDdRF6Dl+AUXFSffUykeN6AcTfAHNP38QowIBfU9VojxfMGzLqU
+        zCt48uTJ7tGjR5Lnz5/Lvwk8A0ftHVJszTcfvn8JPACveFTvgVEcUjrjTk9PdycnJ7vLly9P4ubNm93f
+        MGD2GQIG4yg9Q4otgNkXwCl4DXaOV+r9yaTOMBqqzJ7CtWvXdnfv3t09ffo0BoFwyDtV118TKa4JTKb5
+        vOvfJNMVxfAAc26bWbyjlcFzuXPnzlAwOPE36xVSXAuYyzt/zHzjdvxbmHLRmbS7cuWKNPYQGAwxf3D4
+        a5LiSrE2MJVjPsd7ZbjipfqcZExn0q1bt6Shh8KgPnz4MAaCw9NV9V1qIsWawNDbYOjup/4dz8/K14rh
+        AIY8NoPu3bsnzVwK5wu7hqPomTWRYi1g5LNgrOcx+MT9+x93Tm7Ez4MZXC90xtSaFxTMpsTwtNrQJMUa
+        wMShAJwBDk83nMa5Ir7/WfxMGMEyRTaGmY4ysQZMgUMgODStEggpLkUYanRrABwvYfj5I2md2Tj6oJA3
+        /jMNGMHVbmcMJ1RlYC1EIHjt6lmTFJcA81QAOPZ3ExyOTFFtbdBbEyTNU0yKMCHPC/fv35fm1YQJgF0v
+        UfTQpUjxUGAa8/9oJAOQuzHOuyzp65PrP+GY7yqcq+A9ttcNmMAiXmcIc3xlXG24OLRrJor5aglSPAQY
+        FocTEgPQGZ2GIq9zToh/S17bezzekDXnBQ9rUe66TJWrDUtSnAvM4hAT09AYAG90vpN47vSP3bmhVs9c
+        0XaGMKVUptWGwbZrJmSN6xCkOBcY9TIYR3JujfNeJuR0NUHHRV1Ry6EBZgYXWMq0NQjDErOlKr1BinOA
+        SVeDaSSP5TgvjE76hTQvUD9z+udJM4qCHhqfS9vMXpRha8BVdciWqvQGKc4BJsUqKP/d3SE8OqNjJmR3
+        PI/2/qHUtrjjYEDe5JlT1l5K6A1yzpqLFKcCc1iSiIbltBLnZnQOTNKLCRpHP2f86s6JKuhxu7Izo9W8
+        QNgb7LqJxZmSFKcCc2Iv8MPKUCbk01hbO8TVM0sa9m9SFPTQeG5PdkYwc1GGrQXXJ3ZtsHjdIMUpwBg1
+        F5ip/q72PcP3nO7uxpElDMusJq+e0fjelqcyay3CAk6u7OcgxSnAmDh+d70AR2+gz5BUJjS2eo4pryro
+        5dI2i27KsLUIE3Tu6YcgxSkIk3iXD2ZCTvdDlpwz0mtfpNeMotuj8VW2PA8h7D0s2hKV4j5gSByKGJCh
+        lJN3+1gmFBd1vnd4ikwEja++5TmVkCUtmhekuA8YEmtEX4LC6PTefZlQr0iHf3efg4D+7N5j9Lo9Gr/a
+        luc+OPy5a+eb7hCkuA+YwT0Bb863PB6QCfVST/y7FzAQV+LF4ggGrLblOQbXJnZdsGhyluI+gjGe2ZmQ
+        e39RWwoaUavn1bc8h7Drkvi95iDFMWDExWCM0cuEMJz8mXSVCfW6L/49VFvqCnpnJ9ftNdIr6MGAvOXJ
+        0jZ7Q6tMya5L/HeaixTHgAl5UsawYcbMyYTinDGUUflAenqZCAzobXl6mEZyIcfFFSfS2gHy1/LfaS5S
+        HAMmdEFwAfjdvTY7E1K1JeouMD+ko6FWz3nLcyo1AuQ/L36nOUhxDJgQM6NP3WsqEyomZ/d+C1heJ/Do
+        dB7fTeee3JMITODqmeVtzg/ca8iT9SFMDZD/G/995iLFMWBADIJt3qtMqJic3ecUAUt6lxElnfMPg2Kf
+        YUwqmsEcBsd+01A9QF6P156DFMeAAUUQwJJMyGdUvnBnPcmGMs+iFSqBcTUD1DZFhQExCJ8NZEIWgLFM
+        yGdUKpDxWiTPNWsBU1WAxuadtos1GNArWWDY+C+ddxMmjnJyTq8NZkJJI92uHI6xkkoY2CIAMMFMWzU4
+        BNfgKp3XYimdQWKAFu2wSXEMmNALwlcfvPcLjhzHOwNwnJIJ+dT1oguMBdIPZUbv8wwYkNcJDhrDTR+a
+        xPpSkwAdihTHgBHFYs29VkzO7rWid/AY9YQq4PUmdgJjeVfmbc6JnLsASXEfwiAGZnEmlDQLiqd4CIzA
+        vNnrgz0cJUBS3AdMiQW8+8CGj5gJyd6B86mZ0NBvFfJeArHiHZ8PYk7PfWfm+Ewn9/xWbSoMeDf+A84H
+        DFCVHxxKcR8wJu4B/5uOMROSvUPpQTPy0OVB4/M+AplauFMBIv6zDqQYKucgxX3AGJW59AzD+ZxMKG4S
+        EfYs9fQdM6E8D9BEZfhcuBfBAPFJbwaIO2czAtSb/+YixSkkk7xpH7nXhop4UzMhUjQMjWWxLs8DXL22
+        2MhRAbLvkFg0LElxCjApjt+d2TjKdYLSg+aR3RuNzc8aEVXPaUHNDR0ixSnAKDWEMEuakwnFnTPSm9gN
+        NDY/Z0RaPvAV4bXdd5GJwxykOBUYFvP57935vkwoTu5ELv/RUGYiueEtHwJWhGxrcR1LilOBaSqjIYdk
+        Qrmc7UEjOQ/kiZi7Zy039CPiEfnFaaoU55DM82b+5l7zmZCVvL1myJIEQSOZm3cN5kTc8uFfBSdm+z6g
+        2PM+BCnOAeapdJULNJ8JqeqqR+4PoJF5E5+s/UPBKYT/DMPioYhIcS4wMa6gyY/puC8TkhVINLBXmOMm
+        ijKlJbwJ3Hc6Pz8SITCSWVFxh6Mn/I2jpaiqJDGUCfUWZK2frlNwHgq9YFH52iPFQ4Chvck2PabyF2CA
+        Jm/OoHHFgqzVjwPHCHNBtV5ApHgoMFWlnWoOoCYbgcbJwtwxCYszUq0XECkuAeaqBVhkKBPqFeZ49ylT
+        WsJhKKwLqvxEyiPFJcDgoQnYGCpJcB7Ija1VmFtKfKoCLCrWKaS4FBg9FIihzRnOA/lJh2MvyAyWyO07
+        JaoOQ4YUawHTfUY0WGNB43qFuWMvyEhIR8niGtEQUqwJzOczRjITImgcd6pyY49ZmDNED2C2Vi0bikix
+        FWhYrzB37AUZh0AxB6waACLFVqBxeUFGWv++wMMhUOxFrx4AIsVWoIFMSXuBoBEtN2t494eFmMF5avUA
+        ECm2BA1lappXyAaHhbVXypx8QynCWCULGkKKrUGjmaL2KqYGN3BqrpoZWN75A+YzTa6+DtiHFI8FDQB5
+        /8BD09g7GJC5awiO98y6Rp6e4JDY9O73SPHYwBCWsWUwDAaFpnIy550dmfjISmc+aDL2DyHF8wLMYc9g
+        Qa83eVeAc9D2/0+YCwxj7+C8UUziE2AQme3Q+CqPLtZEim8DMJO9hIHhcKKo+rzomkhxoy1S3GiLFDfa
+        IsWNtkhxoy1S3GiLFDfaIsWNtkhxoy1S3GiLFDfaIsWNluze+R+dPFk+KUnfeAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="Revit.Elements.Element.GetSuperComponent.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
         iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAApoSURBVHhe7Z0/yx1FFMb9CPkI+Qhp0kVIETD6WoSUqZJG
-        Ur6FEGxCqnSBFAGbFIGgRbBIY2XhK/gBUomNGEQbQYz/CkG4Ps8yZzh75tm9u3dn576BLX7s5rn3vXvn
-        OTszZ87s1Xd2u93GkZHiRlukuNEWKW60RYobbZHiRlukuNEWKW60RYobbZHiRlukuNEWKW60RYobbZHi
-        RlukuNEWKW60RYpvCy9evLgAro5wSf3deUOK55Vk7ANwBt6A3UReg5fgFFxUn31MpHjegHE3wBzT9/EK
-        MCAX1PVaI8XzBsy6lMwrePLkye7Ro0eS58+fy78JPANH7R1SbM03H75/CTwAr3hU74FRHFI6405PT3cn
-        Jye7y5cvT+LmzZvd3zBg9hkCBuMoPUOKLYDZF8ApeA12jlfq/cmkzjAaqsyewrVr13Z3797dPX36NAaB
-        cMg7VddfEymuCUym+bzr3yTTFcXwAHNum1m8o5XBc7lz585QMDjxN+sVUlwLmMs7f8x843b8W5hy0Zm0
-        u3LlijT2EBgMMX9w+GuS4kqxNjCVYz7He2W44qX6nGRMZ9KtW7ekoYfCoD58+DAGgsPTVfVdaiLFmsDQ
-        22Do7qf+Hc/PyteK4QCGPDaD7t27J81cCucLu4aj6Jk1kWItYOSzYKznMfjE/fsfd05uxM+DGVwvdMbU
-        mhcUzKbE8LTa0CTFGsDEoQCcAQ5PN5zGuSK+/1n8TBjBMkU2hpmOMrEGTIFDIDg0rRIIKS5FGGp0awAc
-        L2H4+SNpndk4+qCQN/4zDRjB1W5nDCdUZWAtRCB47epZkxSXAPNUADj2dxMcjkxRbW3QWxMkzVNMijAh
-        zwv379+X5tWECYBdL1H00KVI8VBgGvP/aCQDkLsxzrss6euT6z/hmO8qnKvgPbbXDZjAIl5nCHN8ZVxt
-        uDi0ayaK+WoJUjwEGBaHExID0BmdhiKvc06If0te23s83pA15wUPa1HuukyVqw1LUpwLzOIQE9PQGABv
-        dL6TeO70j925oVbPXNF2hjClVKbVhsG2ayZkjesQpDgXGPUyGEdybo3zXibkdDVBx0VdUcuhAWYGF1jK
-        tDUIwxKzpSq9QYpzgElXg2kkj+U4L4xO+oU0L1A/c/rnSTOKgh4an0vbzF6UYWvAVXXIlqr0BinOASbF
-        Kij/3d0hPDqjYyZkdzyP9v6h1La442BA3uSZU9ZeSugNcs6aixSnAnNYkoiG5bQS52Z0DkzSiwkaRz9n
-        /OrOiSrocbuyM6PVvEDYG+y6icWZkhSnAnNiL/DDylAm5NNYWzvE1TNLGvZvUhT00HhuT3ZGMHNRhq0F
-        1yd2bbB43SDFKcAYNReYqf6u9j3D95zu7saRJQzLrCavntH43panMmstwgJOruznIMUpwJg4fne9AEdv
-        oM+QVCY0tnqOKa8q6OXSNotuyrC1CBN07umHIMUpCJN4lw9mQk73Q5acM9JrX6TXjKLbo/FVtjwPIew9
-        LNoSleI+YEgcihiQoZSTd/tYJhQXdb53eIpMBI2vvuU5lZAlLZoXpLgPGBJrRF+Cwuj03n2ZUK9Ih393
-        n4OA/uzeY/S6PRq/2pbnPjj8uWvnm+4QpLgPmME9AW/OtzwekAn1Uk/8uxcwEFfixeIIBqy25TkG1yZ2
-        XbBocpbiPoIxntmZkHt/UVsKGlGr59W3PIew65L4veYgxTFgxMVgjNHLhDCc/Jl0lQn1ui/+PVRb6gp6
-        ZyfX7TXSK+jBgLzlydI2e0OrTMmuS/x3mosUx4AJeVLGsGHGzMmE4pwxlFH5QHp6mQgM6G15ephGciHH
-        xRUn0toB8tfy32kuUhwDJnRBcAH43b02OxNStSXqLjA/pKOhVs95y3MqNQLkPy9+pzlIcQyYEDOjT91r
-        KhMqJmf3fgtYXifw6HQe303nntyTCEzg6pnlbc4P3GvIk/UhTA2Q/xv/feYixTFgQAyCbd6rTKiYnN3n
-        FAFLepcRJZ3zD4Nin2FMKprBHAbHftNQPUBej9eegxTHgAFFEMCSTMhnVL5wZz3JhjLPohUqgXE1A9Q2
-        RYUBMQifDWRCFoCxTMhnVCqQ8VokzzVrAVNVgMbmnbaLNRjQK1lg2PgvnXcTJo5yck6vDWZCSSPdrhyO
-        sZJKGNgiADDBTFs1OATX4Cqd12IpnUFigBbtsElxDJjQC8JXH7z3C44cxzsDcJySCfnU9aILjAXSD2VG
-        7/MMGJDXCQ4aw00fmsT6UpMAHYoUx4ARxWLNvVZMzu61onfwGPWEKuD1JnYCY3lX5m3OiZy7AElxH8Ig
-        BmZxJpQ0C4qneAiMwLzZ64M9HCVAUtwHTIkFvPvAho+YCcnegfOpmdDQbxXyXgKx4h2fD2JOz31n5vhM
-        J/f8Vm0qDHg3/gPOBwxQlR8cSnEfMCbuAf+bjjETkr1D6UEz8tDlQePzPgKZWrhTASL+sw6kGCrnIMV9
-        wBiVufQMw/mcTChuEhH2LPX0HTOhPA/QRGX4XLgXwQDxSW8GiDtnMwLUm//mIsUpJJO8aR+514aKeFMz
-        IVI0DI1lsS7PA1y9ttjIUQGy75BYNCxJcQowKY7fndk4ynWC0oPmkd0bjc3PGhFVz2lBzQ0dIsUpwCg1
-        hDBLmpMJxZ0z0pvYDTQ2P2dEWj7wFeG13XeRicMcpDgVGBbz+e/d+b5MKE7uRC7/0VBmIrnhLR8CVoRs
-        a3EdS4pTgWkqoyGHZEK5nO1BIzkP5ImYu2ctN/Qj4hH5xWmqFOeQzPNm/uZe85mQlby9ZsiSBEEjmZt3
-        DeZE3PLhXwUnZvs+oNjzPgQpzgHmqXSVCzSfCanqqkfuD6CReROfrP1DwSmE/wzD4qGISHEuMDGuoMmP
-        6bgvE5IVSDSwV5jjJooypSW8Cdx3Oj8/EiEwkllRcYejJ/yNo6WoqiQxlAn1FmStn65TcB4KvWBR+doj
-        xUOAob3JNj2m8hdggCZvzqBxxYKs1Y8DxwhzQbVeQKR4KDBVpZ1qDqAmG4HGycLcMQmLM1KtFxApLgHm
-        qgVYZCgT6hXmePcpU1rCYSisC6r8RMojxSXA4KEJ2BgqSXAeyI2tVZhbSnyqAiwq1imkuBQYPRSIoc0Z
-        zgP5SYdjL8gMlsjtOyWqDkOGFGsB031GNFhjQeN6hbljL8hISEfJ4hrREFKsCcznM0YyEyJoHHeqcmOP
-        WZgzRA9gtlYtG4pIsRVoWK8wd+wFGYdAMQesGgAixVagcXlBRlr/vsDDIVDsRa8eACLFVqCBTEl7gaAR
-        LTdrePeHhZjBeWr1ABAptgQNZWqaV8gGh4W1V8qcfEMpwlglCxpCiq1Bo5mi9iqmBjdwaq6aGVje+QPm
-        M02uvg7YhxSPBQ0Aef/AQ9PYOxiQuWsIjvfMukaenuCQ2PTu90jx2MAQlrFlMAwGhaZyMuedHZn4yEpn
-        Pmgy9g8hxfMCzGHPYEGvN3lXgHPQ9v9PmAsMY+/gvFFM4hNgEJnt0Pgqjy7WRIpvAzCTvYSB4XCiqPq8
-        6JpIcaMtUtxoixQ32iLFjbZIcaMtUtxoixQ32iLFjbZIcaMtUtxoixQ32iLFjZbs3vkfnTxZPilJ33gA
-        AAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAYKSURBVHhe7Zy7bhtHFIb9CHyD+BHUyPBFkRWJvkEBIqgK
+        WEmdkIpQoyIQwcJQJ0gIhCAIhEAXBCFVqXUndykF5AWEPIESu0m1Of+CY9DjfylyZvbskjrFB9j/Equd
+        8+/czs7MgyzLjIqhoqELFQ1dqGjoQkVDFyoaulDR0IWKhi5UNHShoqELFQ1dqGjoQkVDFyoaulDR0IWK
+        hi5UNHShoqELFQ1dqFhH3n/7ZkPoCifCVQGHAn6zJDTYfeoIFevGIMBZADcCjFlj960LVKwbQ0GN4VaA
+        IQ/Z36gSKlbNxcXFnHAo3AhrErjQmlAEmrTamEHFKhkEPhsCb2/jp+by1Y/fPM/A98+efsHmwrP82v7K
+        cvbH6xcs8Iz83uw5NKFiFczPzzdardYvCPz5+Xm2v7/vTLgZXL8UsnFZfPQo+2Hx6+znFyss+MOg31jy
+        n0cTKmojQWsLtwjewsJCDv4NMwZGzMn/r6GFAENQS96tvmYmOA7Zs2lARS0kQCODu7W1lZ2env4rJjTY
+        9UkZwwz0PerNExXLRoK6cXZ2dou3nAXL40ZY8rQoYMaIZupaUDWCimWBZqXX6/2F4KOpabfbNEiEDtGi
+        QZ9RUCtUjaBiGcAA4R8YsLOz86ndH5P3REvCd0+eZJdvXlVqBBVTI4Fv9Pv9v2HA5uYmDcYdfCBaMtA8
+        FQxrL1l5UkPF1Gxvb38FAyZoftQZYUSXlSklVEyNFHKiMX5VwIiCPqLUeQQVUyKF6/qFDSGiKZsI9BHE
+        iHzCWBZUTIUUCvMAWthJgQlHR0f0Wmq2ny/6JoDSmiUqpkIKFDzL9XFpjPX1dXo9Nb+9bPomIAtbymiJ
+        irFIsDYQsE6nQwsYAmbPqe85ilePH/smgFJqAxVjccPR4+NjWsAQVldXcxNAs9mkv0kNUhyeCaXUBirG
+        IEFqu2C1Wi1auFBgKu6rNdQtGC21WbljoGIMEqT8e8De3h4tWAxoinBvpDzY9TLA9wnPhGtW7hioGIoE
+        KO8LEKQymgzULNxfq18AGLJ6JoCkX+WoGIIEpyHktaDOM+MQyEw6aZNExRAGJpx0u93/WEGmGdJBJ80p
+        UTEUeeCkef+6gG/Yngm3rPyhUDEUeeAkKYo64pkAkvULVAxFHnYqEnUhkBl0sqQeFUORh02WpqgbZKia
+        bPZMxRDQKWsOHZFLAuxaGZDOuZYm5GN4VoAycMthkM5g11NjJhDc7FlrTmImELBYAH9P6xuDmeCBJsg1
+        RzCD/SY1ZoKHM8A6Zg9NE9AfIEs74dqlKKZliJrNYt7IMU2TtSv/4WcFzwBQ27TFof/wswD5plDrBN6G
+        X4BZgHTKV6z8oVAxFHngh34BYsBETLPDL2JqPuo45KGTJPGGV1dUaULB0pd6ft50uKDFLtLCTNjdSzMx
+        6PN2eck3oN4f+kG/38f2pqjlLsPNUJUGTPOSl25M8IaboSoNAKRDnprFX41er/cRqYWQGa1rhqo2AH0B
+        qQXJZsnDUDEWCWK+Ci8kzVwHA8AsLAjG9qgPqA2sgHUHGwo9A0AptQBQMQViRN43sEIW8JFo6hRtEhFK
+        20RIxVRIobAJfNx5wxHRVMFoqGAn59Rvl8JunfzIhBEg3VFp3uk+bBwclVM6GfymsgzsCAOS5oiKoGIZ
+        7O7uHuNLmNv8NzQjnsN1PzBaoA8oMGC2NpMDCfanzSMHBwfOAOzwR9IvaeJvXHBGEumEVQ0AVCwLCfjJ
+        IPiO/Gw6CYjqQmI0P/f2gBEggf9d5hCoAR0UVlj79eXKnwgKVj+zoKUE22ML3n6gbgCgohZSYByd+Vkg
+        MFNNbQbefAS/YPjpuJ+HTgESjBwEDGlkdJwssHeBwGPmS1ZJ+CAdUemRnVTURAJwORQQCpoP1BBkNfFG
+        u8MHfXDdDiIMRAKB03+RGmCBKgM7krMICQzOQL2zZgSCZscOpx0XBEpoC7GGoHbhrbdjmmORIM4J7sBy
+        GOMOKPdBwPEb1KjavfFFUNHQhYqGLlQ0dKGioQsVDV2oaOhCRUMXKhq6UNHQhYqGLlQ0dKGioQsVDV2o
+        aOhCRUMXKhqaZA/+BzmP4WnwLs1dAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="Revit.Elements.Element.GetSuperComponents.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACEAAAAhCAYAAABX5MJvAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAI3SURBVFhHzZZBS1tBFIX9Cf0p2UR0oVbta16copJfYDY2
+        dOUmZCGEELLoolmkhLoweRFCbMnOjVBbxWIXXbotdF2KLaV0UWlRxntCXhnHk2RQHF18PObk5dw7c+/M
+        vDGt9Z1DRd9Q0TdU9A0VfUNF31BxFB+epBNCySLB3nWBioOo1WpT9Xr9Y/R09UX0+JGO2UmnziUJvafC
+        H/JcYf8dBhUZyWRyLQiC37lcTpfL5SMZa5PUxISuzs9pJPNOhZ/l+YD5MKho0mq1nsnsv1tBP1nj/yxN
+        Tuo3YXB2oNJ/XBOhokm329XZbNYOdmqNLzE9Pq5fh0FvRZinDRVjxLBkB4ghiV0CKyI9gl4pMW8TKgKU
+        odlsnrMAoNFoUN1kfXZGu5SFiqDdbv8cNluUiekmKAsaVRi6Y6gIxOTQNr0O2MJSlg0WI4aKQAx+2YY2
+        o/oCoCS7C6ljFiOGiiCTyVBTE9e+uLUklFK6UCjQ30xulIQY3Iue2LINAfrAZWeAG++OTqdzwhoPfVAs
+        Fq/oDJRiX4Wn1z4nZLYrURT9tYz/uSaACw0n5lsVPmf+JlSMEbOEYYwt+9UYDyS+OySBL6NWAVDRJJ/P
+        v6xWq7pSqWyzgDZYASTQP66dPnSoaCNH+M7W8uImvhdwMQ0Kjh7olwAr4PylRUWGmD58r8Jv8ux9SWHr
+        IeirYL43c+j92Y+8NW2oOAzMEIEkoW0cQjLrPYyFZfa+C1T0DRV9Q0XfUNE3VPQNFf2ixy4AFYsVaBJI
+        HqcAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
